# terrasim

./: .gitignore  .gitmodules  .ocamlformat  .ocamlformat-ignore  Makefile  PROJECT_NAME_.opam  README.md  TerraSim.opam  TerraSim.opam.template  dune  dune-project  dune-workspace  find_undoc.sh  generated_sprites.ml  ocaml_project.opam  roadmap.md  setup.sh  shell.nix  terrasim.opam  terrasim.opam.template
.github/workflows/: ci.yml
assets/fonts/: gen_fonts_file.py
assets/logo/: logo.psd
assets/sprites/: gen_sprites_file.py  pad_nums.sh
assets/sprites/lifeforms/_zips/: unzip_lifeforms.py
assets/sprites/ui/: examine_icon.psd
docs/: PROJECT_NAME_.mld  dune  index.html
docs/module/: index.html
docs/module/Assets/: index.html
docs/module/Assets/Fonts/: index.html
docs/module/Assets/Spriteloader/: index.html
docs/module/Assets/Sprites/: index.html
docs/module/Cameras/: index.html
docs/module/Controls/: index.html
docs/module/Game_logic/: index.html
docs/module/Native/: index.html
docs/module/Rendering/: index.html
docs/module/Simulation/: index.html
docs/module/Utils/: index.html
docs/module/World/: index.html
docs/terrasim/: index.html
docs/terrasim/Assets/: index.html
docs/terrasim/Cameras/: index.html
docs/terrasim/Controls/: index.html
docs/terrasim/Game_logic/: index.html
docs/terrasim/Globe_render/: index.html
docs/terrasim/Native/: index.html
docs/terrasim/Rendering/: index.html
docs/terrasim/Simplex_noise/: index.html
docs/terrasim/Simulation/: index.html
docs/terrasim/Utils/: index.html
docs/terrasim/World/: index.html
docs_source/: TerraSim.mld  dune  index.suffix.mld  outer_index.mld
docs_source/odoc.support/: odoc.css
lib/: a.out  biomes.ml  camera.ml  cursor.ml  dune  globals.ml  graphics.ml  logging.ml  opengl_utils.ml  ui.ml  utils.ml  worldgrid.ml
lib/assets/: assetloader.ml  dune  fonts.ml  spriteloader.ml  sprites.ml
lib/camera/: atlas_camera.ml  camera.ml  edit_camera.ml
lib/cameras/: atlas_camera.ml  camera.ml  dune  edit_camera.ml
lib/controls/: atlas.ml  atlas_controls.ml  common.ml  common_controls.ml  cursor.ml  dune  edit.ml  edit_controls.ml  globe.ml  globe_controls.ml  ui.ml
lib/game_logic/: altitude.ml  dune  gameloop.ml  handle_input.ml  handle_render.ml  rendering.ml  world_setup.ml
lib/rendering/: atlas_screen.ml  atlas_screen_opengl.ml  blank_screen.ml  draw_cursor.ml  dune  edit_screen.ml  globe_data.ml  globe_screen.ml  globe_screen_opengl.ml  gradients.ml  graphics.ml  opengl_triangle.ml  opengl_tutorial.ml  rendering.ml  text.ml  ui_button.ml
lib/rendering/screens/: atlas.ml  atlas_screen_data.ml  edit.ml  edit_screen_data.ml  globe.ml  globe_data.ml
lib/rendering/screens/atlas/: atlas.ml  atlas_screen_data.ml  atlas_views.ml
lib/rendering/ui/: button.ml  edit_ui.ml  popup.ml  ui_texture.ml
lib/simulation/: dune  simulation.ml  simulation_info.ml  simulator.ml
lib/utils/: colors.ml  dune  globals.ml  logging.ml  opengl_utils.ml  sdl_utils.ml  standard_utils.ml
lib/world/: altitude.ml  biomes.ml  dune  grid.ml  noise.ml  world_setup.ml
lib/world/life/: lifeform.ml
media/: 3_terraingentest_5_21_25.webm
native/: dune  simplex_noise.ml
native/globe_render/: dune  globe_render.c  globe_render.h  globe_render_stubs.ml
ocaml_template/: setup.sh
shaders/: atlas.vert  basic_shader.frag  basic_shader.vert  globe.frag  globe.vert  ui.frag
test/: dune
(+83 files in other folders)
