(include_subdirs unqualified)

(library
 (name TerraSim)
 (public_name TerraSim)
 (libraries
  tsdl
  tsdl-image
  tgls
  tgls.tgl4
  domainslib
  ctypes
  ctypes.foreign
  globe_render
  digestif)
 (preprocess
  (pps ppx_blob))
 (preprocessor_deps
  (source_tree ../assets)
  (source_tree ../shaders)))
