(include_subdirs unqualified)

(library
 (name TerraSim)
 (public_name TerraSim)
 (libraries
  tsdl
  tsdl-image
  tsdl-ttf
  tgls
  tgls.tgl4
  domainslib
  ctypes
  ctypes.foreign
  globe_render
  digestif
  ppx_unreachable)
 (preprocess
  (pps ppx_blob ppx_unreachable))
 (preprocessor_deps
  (source_tree ../assets)
  (source_tree ../shaders)))
